fixed overflow issues in posts as well

--- a/src/components/Dashboard/search.css
+++ b/src/components/Dashboard/search.css
@@ -42,3 +42,10 @@ input {
   text-align: center;
   margin-bottom: 16px;
 }
+
+.groups {
+  width: max-content;
+  align-items: center;
+  margin-right: 16px;
+  margin-left: 16px;
+}
