--- a/src/components/GroupPage/PostEditor/posteditor.css
+++ b/src/components/GroupPage/PostEditor/posteditor.css
@@ -24,3 +24,36 @@ div {
     margin: 1em;
   }
 }
+
+.note-content {
+  padding: 10px 5px;
+  font-size: 16px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  width: 90vw;
+  margin-left: 15px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.note-content .input {
+  border: none;
+  padding-left: 5px;
+  height: 50px;
+  width: 85%;
+}
+
+.edit-button {
+  float: right;
+  margin-left: 5px;
+}
+
+.delete-button {
+  float: right;
+  margin-left: 5px;
+}
+
+.done-button {
+  float: right;
+  margin-left: 5px;
+}
